--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,17 @@
 version: '2'
 
 services:
+  portainer:
+    image: portainer/portainer
+    command: -H unix:///var/run/docker.sock
+    restart: always
+    ports:
+      - 9000:9000
+      - 8000:8000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    
   zookeeper:
     image: confluentinc/cp-zookeeper:6.1.0
     hostname: zookeeper
@@ -77,6 +88,8 @@ services:
       - elastic
     
 volumes:
+  portainer_data:
+    driver: local
   data01:
     driver: local
     
