fix: port forwarding feat(kafka): delete message after an hour

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_LOG_RETENTION_HOURS: 1
 
   kafdrop:
     image: obsidiandynamics/kafdrop
@@ -40,7 +41,7 @@ services:
     depends_on:
       - kafka1
     ports:
-      - "9011:9011"
+      - "9011:9000"
     environment:
       KAFKA_BROKERCONNECT: "kafka1:9092"
       JVM_OPTS: "-Xms32M -Xmx64M"
